--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -61,7 +61,7 @@ login=Login
 logout=Logout
 
 meme=Meme
-message=Message
+notification=Message
 mi=mi
 
 new-password=New password
@@ -121,7 +121,7 @@ delete-account.confirm=I hereby confirm to delete this account permanently.
 delete-account.not-active=Link is not active yet. Please check the instructions we have sent you or send another account deletion request.
 
 donate.title=Donate
-donate.notice-1=Be sure to fill in your account's email address in the message or name area.
+donate.notice-1=Be sure to fill in your account's email address in the notification or name area.
 donate.notice-2=Use Stripe instead of PayPal because its fees are much lower.
 donate.notice-3=A small amount is deducted here, corresponding to the site operator's fee.
 donate.latest-donations=Latest Donations
@@ -168,11 +168,11 @@ login.remember=Remember me
 login.privacy-policy=Privacy policy was updated on the {0}
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
-message.title=Messages
-message.match=You got a match! Tap here to send a message :)
-message.video-chat=A video chat has been requested!
-message.js.error.max-length=You have reached the maximum number of characters.
-message.js.video.confirm=Invite chat partner to video chat?
+notification.title=Messages
+notification.match=You got a match! Tap here to send a notification :)
+notification.video-chat=A video chat has been requested!
+notification.js.error.max-length=You have reached the maximum number of characters.
+notification.js.video.confirm=Invite chat partner to video chat?
 
 notification.title=Notification
 notification.liked-by=You have been liked by 
@@ -315,13 +315,13 @@ backend.error.register.email-spam=Email domain is blacklisted for spam
 # Web push #
 
 backend.webpush.like.subject=New like!
-backend.webpush.like.message=Click here to find out more
+backend.webpush.like.notification=Click here to find out more
 
 backend.webpush.match.subject=New match!
-backend.webpush.match.message=Click here to find out more
+backend.webpush.match.notification=Click here to find out more
 
-backend.webpush.message.subject=New message!
-backend.webpush.message.message=Click here to find out more
+backend.webpush.notification.subject=New notification!
+backend.webpush.notification.notification=Click here to find out more
 
 # MAIL #
 
