--- a/src/main/resources/i18n/messages_np.properties
+++ b/src/main/resources/i18n/messages_np.properties
@@ -60,7 +60,7 @@ light=Světlý
 login=Přihlášení
 logout=Odhlášení
 
-message=Zpráva
+notification=Zpráva
 
 new-password=Nové heslo
 no=Ne
@@ -164,11 +164,11 @@ login.register=Nemáte účet?
 login.remember=Zůstaňte přihlášeni
 login.js.error=Přihlášení se nezdařilo, zkontrolujte prosím své přihlašovací údaje, vyplňte captcha a zkuste to znovu. Pokud váš účet ještě nebyl ověřen, byl vám zaslán nový potvrzovací email.
 
-message.title=Zprávy
-message.match=Máte shodu! Klepnutím sem odešlete zprávu :)
-message.video-chat=Byl požadován videochat!
-message.js.error.max-length=Dosáhli jste maximálního počtu znaků.
-message.js.video.confirm=Pozvat partnera chatu k videochatu?
+notification.title=Zprávy
+notification.match=Máte shodu! Klepnutím sem odešlete zprávu :)
+notification.video-chat=Byl požadován videochat!
+notification.js.error.max-length=Dosáhli jste maximálního počtu znaků.
+notification.js.video.confirm=Pozvat partnera chatu k videochatu?
 
 notification.title=Oznámení
 notification.liked-by=Zalíbili jste se
@@ -309,13 +309,13 @@ backend.error.register.email-spam=Emailová doména je na seznamu spamů
 # Web push #
 
 backend.webpush.like.subject=Nové zalíbení!
-backend.webpush.like.message=Kliknutím sem získáte další informace
+backend.webpush.like.notification=Kliknutím sem získáte další informace
 
 backend.webpush.match.subject=Nová shoda!
-backend.webpush.match.message=Kliknutím sem získáte další informace
+backend.webpush.match.notification=Kliknutím sem získáte další informace
 
-backend.webpush.message.subject=Nová zpráva!
-backend.webpush.message.message=Kliknutím sem získáte další informace
+backend.webpush.notification.subject=Nová zpráva!
+backend.webpush.notification.notification=Kliknutím sem získáte další informace
 
 # MAIL #
 
